--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "owl-carousel-2": "^0.0.3",
     "popper.js": "^1.12.5",
     "sass": "^1.0.0-beta.2",
+    "slick-carousel": "^1.8.1",
     "uglify": "^0.1.5",
     "yargs": "^8.0.2"
   },
