--- a/build.config.json
+++ b/build.config.json
@@ -4,12 +4,14 @@
     "js": [
       "node_modules/bootstrap/dist/js/bootstrap.min.js",
       "node_modules/popper.js/dist/umd/popper.min.js",
+      "node_modules/popper.js/dist/umd/popper.min.js.map",
       "node_modules/jquery/dist/jquery.min.js",
       "node_modules/owl-carousel-2/owl.carousel.min.js",
       "node_modules/slick-carousel/slick/slick.min.js"
     ],
     "css": [
       "node_modules/bootstrap/dist/css/bootstrap.min.css",
+      "node_modules/bootstrap/dist/css/bootstrap.min.css.map",
       "node_modules/owl-carousel-2/assets/owl.carousel.min.css",
       "node_modules/owl-carousel-2/assets/owl.theme.default.min.css",
       "node_modules/slick-carousel/slick/slick.css"
